win sequences and bonus sequenced animations

--- a/WordGame/Base.lproj/Main.storyboard
+++ b/WordGame/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-42" y="-130"/>
+            <point key="canvasLocation" x="-42.399999999999999" y="-130.88455772113943"/>
         </scene>
         <!--Tutorial View Controller-->
         <scene sceneID="Zor-VU-q70">
