--- a/WordGame/Base.lproj/Main.storyboard
+++ b/WordGame/Base.lproj/Main.storyboard
@@ -9,27 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Menu View Controller-->
-        <scene sceneID="T1e-JP-nxT">
-            <objects>
-                <viewController id="TJb-xL-gkr" customClass="MenuViewController" customModule="WordGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="h7a-NS-e2A"/>
-                        <viewControllerLayoutGuide type="bottom" id="Gvw-Ra-8do"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="g6I-e0-vfB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="fromMenuToGame" id="IZG-Gr-bw3"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="N59-Bh-BbL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="663" y="-908"/>
-        </scene>
         <!--Game View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -44,13 +23,34 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <segue destination="uLc-hG-2cr" kind="presentation" identifier="fromGameToTutorial" modalPresentationStyle="overCurrentContext" id="rbp-jE-p2e"/>
-                        <segue destination="TJb-xL-gkr" kind="presentation" identifier="fromGameToMenu" modalPresentationStyle="overCurrentContext" id="S4b-zQ-1BE"/>
+                        <segue destination="Lqg-5r-DNy" kind="show" identifier="fromGameToMenu" animates="NO" id="2SH-7H-Wpm"/>
+                        <segue destination="uLc-hG-2cr" kind="show" identifier="fromGameToTutorial" id="mEa-8v-PNa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-42.399999999999999" y="-130.88455772113943"/>
+            <point key="canvasLocation" x="-92" y="-169"/>
+        </scene>
+        <!--Menu View Controller-->
+        <scene sceneID="6mg-bq-xMi">
+            <objects>
+                <viewController id="Lqg-5r-DNy" customClass="MenuViewController" customModule="WordGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EdQ-Ie-XPO"/>
+                        <viewControllerLayoutGuide type="bottom" id="jMO-zp-uay"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="L3e-9c-cw2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="fromMenuToGame" id="WoQ-RI-act"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hXG-9A-o1t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="660" y="-903"/>
         </scene>
         <!--Tutorial View Controller-->
         <scene sceneID="Zor-VU-q70">
@@ -68,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8oF-IN-zcM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="822" y="-248"/>
+            <point key="canvasLocation" x="993" y="-189"/>
         </scene>
     </scenes>
 </document>
